fix: modify sidenavs, services and home layout spacings

--- a/src/app/features/home/components/services/services.component.scss
+++ b/src/app/features/home/components/services/services.component.scss
@@ -1,6 +1,5 @@
 .container {
-  // 2 REM DE MARGIN POIS É SOMADO COM +1 REM DA MARGIN DO PRODUCT CARD
-  padding-top: 2rem;
+  padding-top: 50px;
 }
 
 .service-card {
