--- a/src/app/features/home/pages/home.page.scss
+++ b/src/app/features/home/pages/home.page.scss
@@ -7,4 +7,8 @@
   button {
     font-size: 20px;
   }
+  .container {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
